--- a/reactclient/src/index.css
+++ b/reactclient/src/index.css
@@ -1,21 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Eczar&display=swap');
 
+
 /* -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif; */
-body {
+html,
+body,
+#root {
   margin: 0;
   font-family: "Eczar";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  }
+  
+  #root {
+    display: flex;
+    flex-direction: column;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.card {
-  flex-direction: row;
-}
-.footer {
-  padding-top: 3em;
+#footer {
   margin-top: auto;
+  padding-top: 3em;
+  min-height: 100%;
+  width: 100%;
+}
+
+/* ::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+} */
+
+*::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  height: 10px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: #888;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+a:-webkit-any-link {
+  text-decoration: none;
+  /* color: inherit; */
+}
+.offcanvas {
+  --bs-offcanvas-width: 250px
 }
